AC_PREREQ([2.69])
AC_INIT([fl],[0.0.1],[david.bradshaw.usa@gmail.com])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/shell/shell.cpp])
AC_CONFIG_HEADERS([src/inc/config.h])


AC_PROG_CXX
AM_PROG_AR
AC_PROG_LIBTOOL
AC_PROG_LEX
AC_PROG_YACC

AC_CHECK_LIB([cppunit],[main])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
